Changelog for plone.app.kss
===========================

1.6.0a2 (unreleased)
--------------------

- Updated markup to not use .documentContent.
  This refs http://dev.plone.org/plone/ticket/10231
  [limi]


1.6.0a1 (2009-11-19)
--------------------

    - Fixed tests (portal-column-content is a div)
      [gotcha]

    - Fixed refrehProvider zope command : providers do not need to inherit
      from Acquisition.Explicit anymore
      [gotcha]

    - Removed interface BBB code for old Plone versions.
      [hannosch]

    - Specified package dependencies.
      [hannosch]

    - Made the tests independent of any default content in the site.
      [hannosch]

    - Make the macroContent helper work on Zope 2.12 by
      using a BoundPageTemplate instead of an acquisition-
      wrapped ViewPageTemplateFile.
      [davisagli]

1.4.5 (2009-05-11)
------------------

    - Made kss attribute tests pass on both Plone 3.2 and 3.3.
      Difference: on 3.3 contentview-history was removed and inline
      editing has been disabled by default.
      [maurits]

1.4.4 (2009-03-01)
------------------

    - Correct invalid use of jq.unbind
      [davisagli]

1.4.3 (2008-08-18)
------------------

    - Translate message and message type passed to
      PloneCommands.issuePortalMessage.
      This fixes http://dev.plone.org/plone/ticket/7282
      [maurits]

    - Adjusted deprecation warnings to point to Plone 4.0 instead of Plone 3.5
      since we changed the version numbering again.
      [hannosch]

1.4.2 (2008-07-06)
------------------

    - Make the plugin tolerant if jQuery is not present,
      and not have a "jq" reference error in this case.
      Previously any kss pages (for example, demos) that 
      did not use jQuery, failed with a javascript error
      in the presense of this plugin.
      During this, most things seemed to be working, 
      apart from any plugins that were missing because 
      they were to be loaded after the error.
      [ree]
