@@ -4,6 +4,11 @@ Changelog for plone.app.kss
 1.6.0a2 (unreleased)
 --------------------
 
+- Changed replace_id in content_replacer.changeViewTemplate and 
+  content_replacer.replaceContentRegion to replace#content instead of 
+  redundant #region-content that is not in Plone anymore.
+  [spliter]
+
 - Updated markup to not use .documentContent.
   This refs http://dev.plone.org/plone/ticket/10231
   [limi]
